Fix order tracking links

--- a/src/PartsUnlimited.OrderTracking/Pages/OrderTracking.razor
+++ b/src/PartsUnlimited.OrderTracking/Pages/OrderTracking.razor
@@ -42,7 +42,7 @@ else
         }
     </ul>
 
-    <a href="@($"orders/{orderWithStatus.Order.OrderId}")">Order details</a>
+    <a href="@($"Orders/Details/{orderWithStatus.Order.OrderId}")">Order details</a>
 }
 
 @code {
