--- a/src/PartsUnlimitedWebsite/Views/Shared/_Order.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/Shared/_Order.cshtml
@@ -84,6 +84,7 @@
                 </div>
             </div>
         </div>
+        <a href="order-tracking/@Model.Order.OrderId">Track order</a>
     }
     else
     {
