Fix deploy to azure img link

--- a/src/PartsUnlimited.OrderTracking/Shared/MainLayout.razor
+++ b/src/PartsUnlimited.OrderTracking/Shared/MainLayout.razor
@@ -136,7 +136,7 @@
                     </ul>
                     <p>Deploy to Azure</p>
                     <a class="deploy-azure">
-                        <img src="deploy_button.png" alt="deploy to azure image" />
+                        <img src="images/deploy_button.png" alt="deploy to azure image" />
                     </a>
                 </div>
             </div>
