Style "Order Tracking" page to look like rest of site

--- a/src/PartsUnlimited.OrderTracking/Pages/OrderTracking.razor
+++ b/src/PartsUnlimited.OrderTracking/Pages/OrderTracking.razor
@@ -1,49 +1,70 @@
-﻿@using System.ComponentModel.DataAnnotations
+﻿@page "/order-tracking/{OrderId:int}"
+@using System.ComponentModel.DataAnnotations
 @using System.Threading
-
-@page "/order-tracking/{orderId:int}"
 @implements IDisposable
-
 @inject IOrdersClient OrdersClient
 
-<h1>Order Tracking</h1>
+<section>
+    @if (invalidOrder)
+    {
+        <h2>Invalid order</h2>
+        <p>Sorry, this order could not be loaded</p>
+        <a class="btn" href="find-order">Find an order</a>
+    }
+    else if (orderWithStatus == null)
+    {
+        <h2>Order @OrderId</h2>
+        <h4>Loading...</h4>
+    }
+    else
+    {
+        <h2>Order @OrderId</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <h4>Shipping address</h4>
 
-@if (invalidOrder)
-{
-    <h2>Invalid order</h2>
-    <p>Sorry this order could not be loaded</p>
-    <a href="find-order">Find an order</a>
-}
-else if (orderWithStatus == null)
-{
-    <p>Loading...</p>
-}
-else
-{
-    <h2>Order status</h2>
+                <div>
+                    @orderWithStatus.Order.Name<br>
+                    @orderWithStatus.Order.Address<br>
+                    @orderWithStatus.Order.City, @orderWithStatus.Order.State @orderWithStatus.Order.PostalCode
+                    @orderWithStatus.Order.Country
+                </div>
+            </div>
+            <div class="col-md-8">
+                <h5>Status: @orderWithStatus.StatusUpdates.LastOrDefault()?.StatusText</h5>
 
-    <p>Expected delivery date: @orderWithStatus.Order.OrderDate.ToShortDateString()</p>
+                <div>
+                    @if (orderWithStatus.IsDelivered)
+                    {
+                        <text>Delivered:</text>
+                    }
+                    else
+                    {
+                        <text>Expected delivery date:</text>
+                    }
+                    @orderWithStatus.ExpectedDeliveryDate.ToShortDateString()
+                </div>
 
-    <p>Shipping to:</p>
+                <h4>Status history</h4>
+                <table class="table table-striped">
+                    <tr>
+                        <td>@orderWithStatus.Order.OrderDate.ToShortDateString() at @orderWithStatus.Order.OrderDate.ToShortTimeString()</td>
+                        <td>Order placed</td>
+                    </tr>
+                    @foreach (var statusUpdate in orderWithStatus.StatusUpdates)
+                    {
+                        <tr>
+                            <td>@statusUpdate.TimeStamp.ToShortDateString() at @statusUpdate.TimeStamp.ToShortTimeString()</td>
+                            <td>@statusUpdate.StatusText</td>
+                        </tr>
+                    }
+                </table>
 
-    <div>
-        @orderWithStatus.Order.Name<br>
-        @orderWithStatus.Order.Address<br>
-        @orderWithStatus.Order.City, @orderWithStatus.Order.State @orderWithStatus.Order.PostalCode
-        @orderWithStatus.Order.Country
-    </div>
-
-    <p>Status updates:</p>
-    <ul>
-        <li>Ordered on @orderWithStatus.Order.OrderDate.ToShortDateString() at @orderWithStatus.Order.OrderDate.ToShortTimeString().</li>
-        @foreach (var statusUpdate in orderWithStatus.StatusUpdates)
-        {
-            <li>@statusUpdate.StatusText on @statusUpdate.TimeStamp.ToShortDateString() at @statusUpdate.TimeStamp.ToShortTimeString().</li>
-        }
-    </ul>
-
-    <a href="@($"Orders/Details/{orderWithStatus.Order.OrderId}")">Order details</a>
-}
+                <a class="btn" href="@($"Orders/Details/{orderWithStatus.Order.OrderId}")">Order details</a>
+            </div>
+        </div>
+    }
+</section>
 
 @code {
     OrderWithStatus orderWithStatus;
