Fix logo image link

--- a/src/PartsUnlimited.OrderTracking/Shared/MainLayout.razor
+++ b/src/PartsUnlimited.OrderTracking/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
             <div class="primary-menu">
                 <div class="pull-left logo">
                     <a class="block logo-image" href="/">
-                        <img src="/Images/unlimited_logo.png" alt="Parts Unlimited logo" />
+                        <img src="/images/unlimited_logo.png" alt="Parts Unlimited logo" />
                     </a>
                     <a class="block" href="/">
                         <h1>Parts Unlimited</h1>
