--- a/src/PartsUnlimitedWebsite/Views/Shared/_Login.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/Shared/_Login.cshtml
@@ -1,19 +1,15 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @if (User.Identity.IsAuthenticated)
 {
-    var isNtlm = User.Identity.AuthenticationType == "NTLM";
-    
+
     <li class="dropdown">
         <a href="@Url.Action("Index", "Store")" id="profile-link" class="dropdown-toggle head-link" data-toggle="dropdown">Profile&nbsp;<br class="hidden-xs" /><b class="caret"></b></a>
         <ul class="dropdown-menu">
-            <li>@Html.ActionLink("Manage Account", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })</li>
+            <li><a class="nav-link text-dark" title="Manage" asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="EditProfile">Manage account</a></li>
             <li>@Html.ActionLink("View Orders", "Index", "Orders", new { Area = string.Empty })</li>
-            @if (!isNtlm)
-            {
             <li>
                 <a asp-area="MicrosoftIdentity" asp-controller="Account" asp-action="SignOut">Log out</a>
             </li>
-            }
         </ul>
     </li>
 }
