--- a/src/PartsUnlimitedWebsite/Views/Shared/_Layout.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/Shared/_Layout.cshtml
@@ -60,7 +60,7 @@
                                     </div>
                                 </li>
                                 <li><a href="@Url.Action("Index", "Home", values: null, protocol: protocol, host: hostComponent)" class="head-link" id="home-link">Home</a></li>
-                                <component render-mode="Static" type="typeof(ShoppingCartWidget)" param-CartUrl="@Url.Action("Index", "ShoppingCart", values: null, protocol: protocol, host: hostComponent, fragment: null)" param-ShoppingCartId="@ShoppingCart.GetCartId(Context)" />
+                                <component render-mode="ServerPrerendered" type="typeof(ShoppingCartWidget)" param-CartUrl="@Url.Action("Index", "ShoppingCart", values: null, protocol: protocol, host: hostComponent, fragment: null)" param-ShoppingCartId="@ShoppingCart.GetCartId(Context)" />
                                 @await Html.PartialAsync("_AdminMenu")
                                 @await Html.PartialAsync("_Login")
                                 <li class="dropdown visible-xs">
@@ -168,6 +168,7 @@
     <script src="@UriHelper.BuildAbsolute(protocol, host, pBase, "/lib/jquery-zoom/jquery.zoom.js")"></script>
     <script src="@UriHelper.BuildAbsolute(protocol, host, pBase, "/lib/bootstrap/js/bootstrap.min.js")"></script>
     <script src="@UriHelper.BuildAbsolute(protocol, host, pBase, "/lib/respond/respond.src.js")"></script>
+    <script src="@UriHelper.BuildAbsolute(protocol, host, pBase, "/_framework/blazor.server.js")"></script>
     @RenderSection("scripts", required: false)
 
 </body>
