Code formatting and fix product title link

--- a/src/PartsUnlimitedWebsite/Views/ShoppingCart/Index.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/ShoppingCart/Index.cshtml
@@ -9,4 +9,10 @@
     ViewBag.Title = "Shopping Cart";
 }
 
-<component render-mode="ServerPrerendered" type="typeof(ShoppingCartDetailsWidget)" param-ShoppingCartId="ShoppingCart.GetCartId(Context)" param-DetailsTemplate="@Url.Action("Details", "Store", new { id = "$0" })" param-model="PartsUnlimited.ViewModels.ShoppingCartViewModel2.From(Model)" param-Checkout="@Url.Action("AddressAndPayment", "Checkout", null)" />
+<component
+    render-mode="ServerPrerendered"
+    type="typeof(ShoppingCartDetailsWidget)"
+    param-ShoppingCartId="ShoppingCart.GetCartId(Context)"
+    param-DetailsTemplate="@Url.Action("Details", "Store", new { id = "$0" })"
+    param-model="PartsUnlimited.ViewModels.ShoppingCartViewModel2.From(Model)"
+    param-Checkout="@Url.Action("AddressAndPayment", "Checkout", null)" />
