--- a/src/PartsUnlimitedWebsite/Views/Shared/_Layout.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 @using Microsoft.AspNetCore.Http.Extensions
 @using System.Runtime.InteropServices
 @using PartsUnlimited.Models
-@using PartsUnlimitedWebsite.RazorComponents
+@using PartsUnlimited.Client
  
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
@@ -18,6 +18,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="Icon" href="@UriHelper.BuildAbsolute(protocol, host, pBase, "/images/favicon.ico")" />
+    <base href="~/" />
     <title>@ViewBag.Title – Parts Unlimited</title>
     @await Component.InvokeAsync("Configuration")
 
@@ -60,7 +61,7 @@
                                     </div>
                                 </li>
                                 <li><a href="@Url.Action("Index", "Home", values: null, protocol: protocol, host: hostComponent)" class="head-link" id="home-link">Home</a></li>
-                                <component render-mode="ServerPrerendered" type="typeof(ShoppingCartWidget)" param-CartUrl="@Url.Action("Index", "ShoppingCart", values: null, protocol: protocol, host: hostComponent, fragment: null)" param-ShoppingCartId="@ShoppingCart.GetCartId(Context)" />
+                                <component render-mode="WebAssembly" type="typeof(ShoppingCartWidget)" param-CartUrl="@Url.Action("Index", "ShoppingCart", values: null, protocol: protocol, host: hostComponent, fragment: null)" param-ShoppingCartId="@ShoppingCart.GetCartId(Context)" />
                                 @await Html.PartialAsync("_AdminMenu")
                                 @await Html.PartialAsync("_Login")
                                 <li class="dropdown visible-xs">
@@ -168,7 +169,7 @@
     <script src="@UriHelper.BuildAbsolute(protocol, host, pBase, "/lib/jquery-zoom/jquery.zoom.js")"></script>
     <script src="@UriHelper.BuildAbsolute(protocol, host, pBase, "/lib/bootstrap/js/bootstrap.min.js")"></script>
     <script src="@UriHelper.BuildAbsolute(protocol, host, pBase, "/lib/respond/respond.src.js")"></script>
-    <script src="@UriHelper.BuildAbsolute(protocol, host, pBase, "/_framework/blazor.server.js")"></script>
+    <script src="@UriHelper.BuildAbsolute(protocol, host, pBase, "/_framework/blazor.webassembly.js")"></script>
     @RenderSection("scripts", required: false)
 
 </body>
