Add authentication support

--- a/src/PartsUnlimitedWebsite/Views/Shared/_Layout.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/Shared/_Layout.cshtml
@@ -169,7 +169,9 @@
     <script src="@UriHelper.BuildAbsolute(protocol, host, pBase, "/lib/jquery-zoom/jquery.zoom.js")"></script>
     <script src="@UriHelper.BuildAbsolute(protocol, host, pBase, "/lib/bootstrap/js/bootstrap.min.js")"></script>
     <script src="@UriHelper.BuildAbsolute(protocol, host, pBase, "/lib/respond/respond.src.js")"></script>
+    <script src="@UriHelper.BuildAbsolute(protocol, host, pBase, "/_content/Microsoft.Authentication.WebAssembly.Msal/AuthenticationService.js")"></script>
     <script src="@UriHelper.BuildAbsolute(protocol, host, pBase, "/_framework/blazor.webassembly.js")"></script>
+
     @RenderSection("scripts", required: false)
 
 </body>
