--- a/PartsUnlimited.Client/ShoppingCartWidget.razor
+++ b/PartsUnlimited.Client/ShoppingCartWidget.razor
@@ -1,7 +1,8 @@
 ﻿@using System.Linq;
 
 @inject ShoppingCartNotificationService Notifications
-@inject CartClient Client
+@inject PublicCartClient Client
+@inject AuthenticationStateProvider Provider
 @implements IDisposable
 <li>
     <a href="@CartUrl" title="@_cartSummary" class="head-link" id="shopping-cart-link">
