Support prerendering webassembly

--- a/PartsUnlimited.Client/ShoppingCartDetailsWidget.razor
+++ b/PartsUnlimited.Client/ShoppingCartDetailsWidget.razor
@@ -1,5 +1,5 @@
 ﻿@inject ShoppingCartNotificationService Notifications
-@inject CartClient Client
+@inject ICartClient Client
 
 <div id="shopping-cart-page">
     <section>
