--- a/src/PartsUnlimitedWebsite/Views/ShoppingCart/Index.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/ShoppingCart/Index.cshtml
@@ -2,15 +2,17 @@
 @using PartsUnlimited.Models
 @using PartsUnlimited.ViewModels;
 @using PartsUnlimited.Client
-
+@using PartsUnlimitedWebsite.Services 
+@inject ServerCartClient CartClient 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @model PartsUnlimited.ViewModels.ShoppingCartViewModel
 @{
     ViewBag.Title = "Shopping Cart";
+    CartClient.ShoppingCartId = ShoppingCart.GetCartId(Context);
 }
 
-<component render-mode="WebAssembly"
+<component render-mode="WebAssemblyPrerendered"
            type="typeof(ProtectedShoppingCartDetailsWidget)"
            param-ShoppingCartId="ShoppingCart.GetCartId(Context)"
            param-DetailsTemplate="@Url.Action("Details", "Store", new { id = "$0" })"
