Reuse prerendered state

--- a/PartsUnlimited.Client/Authenticate.razor
+++ b/PartsUnlimited.Client/Authenticate.razor
@@ -1,3 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 
-<RemoteAuthenticatorView Action="@RemoteAuthenticationActions.LogIn"></RemoteAuthenticatorView>
+<RemoteAuthenticatorView Action="@RemoteAuthenticationActions.LogIn"><LoggingIn>@ChildContent</LoggingIn></RemoteAuthenticatorView>
+
+@code{
+    [Parameter] public RenderFragment ChildContent { get; set; }
+}
