--- a/PartsUnlimited.Client/ProtectedShoppingCartDetailsWidget.razor
+++ b/PartsUnlimited.Client/ProtectedShoppingCartDetailsWidget.razor
@@ -1,9 +1,11 @@
-﻿<CascadingAuthenticationState>
+﻿@using System.Runtime.InteropServices
+<CascadingAuthenticationState>
     <AuthorizeView>
         <Authorized>
-            <ShoppingCartDetailsWidget @attributes="Params" />
+            <ShoppingCartDetailsWidget ReadOnly="@(false || !_isBrowser)" @attributes="Params" />
         </Authorized>
         <NotAuthorized>
+            <ShoppingCartDetailsWidget ReadOnly="true" @attributes="Params" />
             <Authenticate></Authenticate>
         </NotAuthorized>
     </AuthorizeView>
@@ -11,4 +13,6 @@
 
 @code{
     [Parameter(CaptureUnmatchedValues = true)] public IDictionary<string,object> Params { get; set; }
+
+    private bool _isBrowser = RuntimeInformation.IsOSPlatform(OSPlatform.Create("browser"));
 }
