--- a/src/PartsUnlimitedWebsite/Views/ShoppingCart/Index.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/ShoppingCart/Index.cshtml
@@ -15,5 +15,6 @@
 <component render-mode="WebAssemblyPrerendered"
            type="typeof(ProtectedShoppingCartDetailsWidget)"
            param-ShoppingCartId="ShoppingCart.GetCartId(Context)"
+           param-InitialModel="ShoppingCartViewModel.ToModel(Model)"
            param-DetailsTemplate="@Url.Action("Details", "Store", new { id = "$0" })"
            param-Checkout="@Url.Action("AddressAndPayment", "Checkout", null)" />
